devops/kubernetes/setup/redis-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redisoperator
  name: redisoperator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisoperator
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redisoperator
      # annotations:
      #   sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: redisoperator
      containers:
        - image: quay.io/spotahome/redis-operator:latest
          imagePullPolicy: IfNotPresent
          name: app
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            limits:
              cpu: 100m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 50Mi
      restartPolicy: Always
