devops/kubernetes/setup/ingress-route-kowl.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: kowl
  namespace: fortify
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kowl.fortify.dev`)
      middlewares:
        - name: basic-auth
          namespace: kube-system
      services:
        - name: kowl
          namespace: fortify
          port: 80
  tls:
    secretName: fortify-kowl-ssl-cert
