devops/kubernetes/setup/ingress-route-vault.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: vault
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vault.fortify.dev`)
      services:
        - name: vault-ui
          namespace: default
          port: 8200
  tls:
    secretName: fortify-vault-ssl-cert
